# gta3sc

./: .bumpversion.cfg  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  git-sha1.cpp.in  stuff.txt
config/: CREDITS.txt  cmp_scmini.py  fix_sa.py  gta3sc.py  gta3sc.xml  simplify.py
config/gta3/: alternators.xml  changed.txt  commandline.txt  commands.xml  constants.xml  default.xml  todo.txt
config/gtasa/: alternators.xml  cleo.xml  commandline.txt  commands.xml  constants.xml  default.xml  todo.txt
config/gtavc/: alternators.xml  commandline.txt  commands.xml  default.xml  extensions.xml  mobile.xml  todo.txt
src/: README.md  annotation.hpp  binary_fetcher.hpp  binary_writer.hpp  binary_writter.hpp  cdimage.hpp  codegen.cpp  codegen.hpp  commands.cpp  commands.hpp  compiler.cpp  compiler.hpp  config.cpp  decompiler.hpp  decompiler2.hpp  decompiler_ir2.hpp  disassembler.cpp  disassembler.hpp  error.hpp  flow.cpp  flow.hpp  main.cpp  main_compile.cpp  main_decompile.cpp  parser.cpp  parser.hpp  parser_lexer.cpp  parser_syntax.cpp  peepholer.cpp  program.cpp  program.hpp  script.cpp  script.hpp  stdinc.cpp  stdinc.h  symtable.cpp  symtable.hpp  system.cpp  system.hpp
src/cpp/: any.hpp  argv.hpp  contracts.hpp  expected.hpp  file.hpp  filesystem.hpp  icompare.hpp  optional.hpp  scope_guard.hpp  small_vector.hpp  string_view.hpp  variant.hpp
src/cxx17/: any.hpp  filesystem.hpp  optional.hpp  variant.hpp
src/defs/: defs.hpp  game.hpp  gta3.cpp  gtavc.cpp
src/dynarec/x86/: CRunningScript.h  autogen.py  codegen_ia32.cpp  codegen_ia32.hpp  codegen_ia32_emitter.cpp  codegen_ia32_emitter.cpp.dasc  codegen_ia32_regalloc.cpp  test.dasc  test_autogen.cpp
src/grammar/: autogen.bat  autogen.py  gta3script.g
src/grammar/autogen/: gta3script.tokens  gta3scriptLexer.c  gta3scriptLexer.h  gta3scriptParser.c  gta3scriptParser.h  gta3scriptsTokens.hpp
test/: Checksum.sh  Discard.sh  Not.sh  README.md  VerifyDiagnosticConsumer.py  lit.cfg  test.sh
test/codegen/: 0001-var-offset.sc  0002-multifile-local-offsets.sc  0003-call-scope-fix.sc  0004-includers-label.sc  0005-mission-vars-header.sc  alternators.sc  andor.sc  arrays.sc  cheader_multifile.sc  cheader_oatc.sc  cleo_call.sc  cleo_mission.sc  cleo_param.sc  cleo_script.sc  cleo_string.sc  collectables.sc  const.sc  constant_precedence.sc  control_flow.sc  dump.sc  emit.sc  expr.sc  extension_lvar_eq_var.sc  extension_repeat_lvar.sc  label.sc  models.sc  multifile.sc  offsets.sc  optimize_andor.sc  optimize_zero.sc  progress.sc  ranges.sc  require.sc  require_cleo.sc  save_string_to_debug_file.sc  scope.sc  skip_cutscene.sc  streaming.sc  switch.sc  switch_3vc.sc  (+7 more)
test/codegen/0001-var-offset/: mission.sc
test/codegen/0002-multifile-local-offsets/: miss1.sc  subscript.sc
test/codegen/0004-includers-label/: miss1.sc  subscript.sc
test/codegen/0005-mission-vars-header/: miss1.sc  miss2.sc
test/codegen/cheader_multifile/: miss1.sc  stream1.sc  subscript1.sc
test/codegen/multifile/: gosub1.sc  gosub2.sc  gosub3.sc  subscript1.sc
test/codegen/multifile/subdir/: mission3.sc  subscript2.sc
test/codegen/multifile/subdir/mission1/: mission1.sc
test/codegen/multifile/subdir/mission2/: mission2.sc
test/codegen/offsets/: gosub1.sc  mission1.sc  stream1.sc  subscript1.sc
test/codegen/progress/: prog2.sc  prog5.sc
test/codegen/require/: miss1.sc  req1.sc  stream1.sc  subscript.sc
test/codegen/require/requires/: req1_from_main.sc  req2_from_extscript.sc  req3_from_subscript.sc  req4_from_miss1.sc  req5_from_stream1.sc  req6_from_everywhere.sc  req7_from_subscript.sc
test/codegen/require_cleo/: req1.sc
test/codegen/streaming/: attractor1.sc  brain1.sc  object1.sc  ped1.sc  stream1.sc
test/frontend/: add_config.sc  override_config.sc  switch.sc
test/frontend/Inputs/: override.xml  test.xml
test/lexer/: argument.sc  array.sc  commands.sc  comments.sc  dump.sc  expr.sc  filenames.sc  label.sc  tokens.sc  whitespaces.sc
test/lexer/filenames/: _a.sc
test/main/: gta3.test  gtavc.test
test/main-test-gta3/: main.scm.md5  main.scm.test
test/misc/: expect_var_badindex.sc  expect_var_noexist_3vc.sc  expect_var_noexist_sa.sc  expect_var_okay_3.sc  expect_var_okay_sa.sc  expect_var_okay_vc.sc
test/peepholer/: branch_elimination.sc  deadcode_elimination.sc  return_elimination.sc
test/preprocessor/: ifdef.sc  syntax.sc
test/semantics/: arrays.sc  break-continue.sc  cleo_call_entity.sc  cleo_call_params.sc  cleo_call_text1.sc  cleo_call_text2.sc  cleo_disallow_global.sc  cleo_disallow_model.sc  cleo_disallow_scripts.sc  cleo_disallow_terminate.sc  collision.sc  commands.sc  control_flow.sc  directives.sc  entity1.sc  entity2.sc  expr.sc  identifiers.sc  identifiers_3vc.sc  identifiers_sa.sc  ranges.sc  repeat.sc  require.sc  scopes.sc  script_name.sc  set_total.sc  skip_cutscene.sc  switch.sc  unsupported.sc  vars_scan_3vc.sc  vars_scan_sa.sc  warn_conflict_text_label_var.sc
test/semantics/Inputs/data/: default.ide  level.ide
test/semantics/collision/: gosub1.sc
test/semantics/directives/: miss2.sc  miss3.sc  miss4.sc  miss5.sc  stream1.sc
test/semantics/includers/: gosub1.sc  something  subscript.sc
test/semantics/require/: req1.sc
test/semantics/script_name/: miss1.sc
utils/: cmp_scmini.py  discover_constants.py  discover_entity_commands.py  ir2_to_gta3.py  license.sh  simplify.py
utils/gta3sc/: __init__.py  bytecode.py  config.py
